--- a/Com_vision/Mediapipe/000.디펜던시 세팅.md
+++ b/Com_vision/Mediapipe/000.디펜던시 세팅.md
@@ -4,3 +4,17 @@
  * vscode에서 extension에서 python만 설치
  * 가상환경에서 conda install opencv
  * 가상환경에서 pip install mediapipe
+
+# 설치 코드
+```
+conda create -n env_name python=3.10.13
+```
+```
+conda activate env_name
+```
+```
+conda install opencv
+```
+```
+pip install mediapipe
+```
