Update 012.pacman control project.md

--- a/Com_vision/Mediapipe/012.pacman control project.md
+++ b/Com_vision/Mediapipe/012.pacman control project.md
@@ -1,4 +1,4 @@
-# pacman 게임 컨트롤 프로젝트
+# pacman 게임 컨트롤 프로젝트(delay)
 * 000-011 까지의 opencv코드를 이해하고 pacman게임을 컨트롤 해보는 프로젝트입니다.
 * pyautogui와 opencv를 같이 사용하연 딜레이가 발생합니다.
 * 이를 최적화 하는 방법을 찾아봅시다.
