--- a/Com_vision/Mediapipe/012.Rock, sissor, paper project.md
+++ b/Com_vision/Mediapipe/012.Rock, sissor, paper project.md
@@ -1,4 +1,4 @@
-# Rock, sissor, paper project
+# Rock, Sissor, Paper project
 
 * 가위, 바위, 보 결과가 화면 text로 출력되는 코드입니다.
 * if 가위가 출력 되었을 때, ~을 출력해라! 라고 코드를 설계하면 mediapipe와 가위바위보를 하는 게임을 만들 수 있지 않을까요?
