Update 014.pacman control project(nodelay).md

--- a/Com_vision/Mediapipe/014.pacman control project(nodelay).md
+++ b/Com_vision/Mediapipe/014.pacman control project(nodelay).md
@@ -1,1 +1,123 @@
-#
+# pacman 게임 컨트롤 프로젝트(nodelay)
+* 아래 코드는 up, down, left, right 와 A, B 키를 사용한 게임 컨트롤 mediapipe hand landmark 코드입니다.
+* 조건문을 바탕으로 landmark[8]번(검지손가락 끝)을 이용하여 양손으로 플레이 할 수 있는 프로젝트입니다.
+* keymapping library로 keyboard를 활용하였습니다.
+* 가상환경에서 아래 추가 라이브러리를 설치하고 코드를 진행해야합니다.
+
+# keyboard 라이브러리 설치
+'''
+pip install keyboard
+'''
+
+##  Mediapipe Game controller Code
+```
+import cv2
+import mediapipe as mp
+import numpy as np
+import keyboard
+import time
+
+
+# Mediapipe 손 검출 라이브러리 초기화
+mp_hands = mp.solutions.hands
+hands = mp_hands.Hands()
+mp_drawing = mp.solutions.drawing_utils
+
+# 웹캠으로부터 영상을 받아오기 위한 코드
+cap = cv2.VideoCapture(0)
+
+# 채도를 0으로 설정
+cap.set(cv2.CAP_PROP_SATURATION, 0)
+
+while cap.isOpened():
+    ret, frame = cap.read()
+
+    if not ret:
+        continue
+
+    # Mediapipe는 RGB 이미지를 사용하기 때문에, BGR에서 RGB로 변환
+    frame = cv2.flip(frame, 1)
+    image = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)
+
+    # 손을 검출
+    results = hands.process(image)
+
+    # 검출된 손의 랜드마크를 화면에 그림
+    if results.multi_hand_landmarks:
+        for landmarks in results.multi_hand_landmarks:
+            mp_drawing.draw_landmarks(frame, landmarks, mp_hands.HAND_CONNECTIONS)
+            
+            # Landmark 8의 좌표 출력을 위한 코드 추가
+            landmark_8 = landmarks.landmark[8]  # Landmark 8을 얻음
+            lm_x, lm_y = int(landmark_8.x * frame.shape[1]), int(landmark_8.y * frame.shape[0])  # 좌표 계산
+            lm_text = f"Index_finger_Tip x:{lm_x}, y:{lm_y}"
+            cv2.putText(frame, lm_text, (10, 35), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 1, cv2.LINE_AA)
+            
+            square_size = int(frame.shape[1] * 0.2)
+            start_x = 850 - square_size // 3
+            start_y = 400 - square_size // 3
+            boxes = [
+                (start_x + square_size // 3, start_y, square_size // 3, square_size // 3), # Up
+                (start_x + square_size // 3 * 2, start_y + square_size // 3, square_size // 3, square_size // 3), # Right
+                (start_x + square_size // 3, start_y + square_size // 3, square_size // 3, square_size // 3), # Down
+                (start_x, start_y + square_size // 3, square_size // 3, square_size // 3), # Left
+                (250 - square_size // 12, 400 - square_size // 12, square_size // 6, square_size // 6), # A
+                (400 - square_size // 12, 400 - square_size // 12, square_size // 6, square_size // 6)  # B
+            ]
+            
+            for i, (x, y, w, h) in enumerate(boxes):
+                if x < lm_x < x + w and y < lm_y < y + h:
+                    if i == 0: print("Up"), keyboard.send('up')
+                    elif i == 1: print("Right"), keyboard.send('right')
+                    elif i == 2: print("Down"),  keyboard.send('down')
+                    elif i == 3: print("Left"),  keyboard.send('left')
+                    elif i == 4: print("A"),  keyboard.send('a')
+                    elif i == 5: print("B"),  keyboard.send('b')
+
+    # 화살표 스타일의 사각형 그리기 위치 수정
+    square_size = int(frame.shape[1] * 0.2)
+    start_point_x = 850 - square_size // 3
+    start_point_y = 400 - square_size // 3
+
+    positions = [(1, 0), (2, 1), (1, 1), (0, 1)]
+    directions = ['Up', 'Right', 'Down', 'Left']
+
+    for idx, pos in enumerate(positions):
+        top_left_point = (start_point_x + square_size // 3 * pos[0], start_point_y + square_size // 3 * pos[1])
+        bottom_right_point = (top_left_point[0] + square_size // 3, top_left_point[1] + square_size // 3)
+        cv2.rectangle(frame, top_left_point, bottom_right_point, (0, 255, 0), 2)
+        
+        # 방향 문자 위치 수정
+        text_size = cv2.getTextSize(directions[idx], cv2.FONT_HERSHEY_SIMPLEX, 0.8, 1)[0]
+        text_x = top_left_point[0] + (square_size // 3 - text_size[0]) // 2
+        text_y = top_left_point[1] + (square_size // 3 + text_size[1]) // 2
+        cv2.putText(frame, directions[idx], 
+                    (text_x, text_y), 
+                    cv2.FONT_HERSHEY_SIMPLEX, 0.8, (255,255,255), 1, cv2.LINE_AA)
+
+    # 원 2개 그리기와 A, B 문자 넣기
+    radius = square_size // 6
+    centers = [(250, 400), (400, 400)]  # 원의 중심 좌표
+    labels = ['A', 'B']  # 원 중앙에 들어갈 문자
+
+    for i, center in enumerate(centers):
+        cv2.circle(frame, center, radius, (0, 255, 0), 2)
+        text_size = cv2.getTextSize(labels[i], cv2.FONT_HERSHEY_SIMPLEX, 1, 2)[0]
+        text_x = center[0] - text_size[0] // 2
+        text_y = center[1] + text_size[1] // 2
+        cv2.putText(frame, labels[i], (text_x, text_y), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 1, cv2.LINE_AA)
+
+    # 프레임 크기를 800x450으로 변경
+    frame_resized = cv2.resize(frame, (400, 225))
+    
+    # 영상을 화면에 출력
+    cv2.imshow('Hand Tracking', frame_resized)
+
+    if cv2.waitKey(10) & 0xFF == ord('q'):
+        break
+
+hands.close()
+cap.release()
+cv2.destroyAllWindows()
+
+```
