--- a/Com_vision/Mediapipe/014.pacman control project(nodelay).md
+++ b/Com_vision/Mediapipe/014.pacman control project(nodelay).md
@@ -5,7 +5,9 @@
 * 가상환경에서 아래 추가 라이브러리를 설치하고 코드를 진행해야합니다.
 
 # keyboard 라이브러리 설치
-```pip install keyboard```
+```
+pip install keyboard
+```
 
 
 ##  Mediapipe Game controller Code
