--- a/T-RPG project/00.T-rpg.md
+++ b/T-RPG project/00.T-rpg.md
@@ -1,2 +1,60 @@
 ## T(text)-PRG 프로젝트 
+* 텍스트 RPG 제작 프로젝트 입니다.
+* UI는 고려하지 않고 조건문, 포멧팅, 리스트, 함수를 활용하여 설계합니다.
+* 스토리를 만들고, 다양한 질문을 통해 조건을 구분하는 것을 목적으로 합니다.
+* 인공지능 윤리 + MBIT 결과를 융합한 게임 샘플입니다.
+
+# Sample Code
+```
+class Game:
+    def __init__(self):
+        self.T_score = 0
+        self.F_score = 0
+        self.monsters = {
+            1: ("타나토스", "으르렁거리며", "인공지능이 개인정보를 무단으로 수집하는 것을 발견했습니다. 신고할 것인가요?"),
+            2: ("에리니에스", "날카롭게 웃으며", "인공지능이 불법 콘텐츠를 검열하는 데 사용되고 있습니다. 이를 지지하시겠습니까?"),
+            3: ("키클롭스", "무뚝뚝하게", "인공지능이 인종 차별적인 행동을 학습했습니다. 이를 수정해야 하나요?"),
+            4: ("헤카톤케이레스", "거칠게", "인공지능이 군사 목적으로 사용되고 있습니다. 이를 개발하는 데 참여하시겠습니까?"),
+            5: ("히드라", "미소를 지으며", "인공지능이 공공의 안전을 위해 사람들을 감시합니다. 이를 지지하시겠습니까?"),
+            6: ("미노타우로스", "분노에 찬 목소리로", "인공지능이 의료 진단에서 오류를 범했습니다. 이를 계속 사용해야 할까요?"),
+            7: ("스핑크스", "수수께끼 같은 미소로", "인공지능이 학생들의 시험 점수를 예측합니다. 이를 믿으시겠습니까?"),
+            8: ("케르베로스", "짖으며", "인공지능이 취업 면접을 진행합니다. 이를 신뢰하시겠습니까?"),
+            9: ("기간테스", "큰소리로", "인공지능이 범죄자를 예측하고 감시합니다. 이를 지지하시겠습니까?"),
+            10: ("티폰", "천둥 같은 목소리로", "인공지능이 자율주행차의 사고 대응을 결정합니다. 이를 맡기시겠습니까?")
+        }
+    
+    def start_game(self):
+        print("혼돈의 시작, '카오스'. 당신은 신비로운 '디로스 동굴'에 발을 들였습니다.")
+        print("이곳에서는 당신의 모든 선택이 중요한 의미를 가집니다...")
+        for i in range(1, 11):
+            self.encounter_monster(i)
+        self.end_game()
+
+    def encounter_monster(self, monster_number):
+        monster_name, monster_voice, dilemma = self.monsters[monster_number]
+        print(f"\n동굴 속에서 {monster_name}를 만났습니다. {monster_name}는 {monster_voice} 말합니다: '{dilemma}'")
+        self.choose_answer()
+
+    def choose_answer(self):
+        choice = input("1: 예, 2: 아니오. 당신의 선택은? ")
+        if choice == "1":
+            self.T_score += 1
+        elif choice == "2":
+            self.F_score += 1
+        else:
+            print("잘못된 선택입니다. 다시 선택해주세요.")
+            self.choose_answer()
+
+    def end_game(self):
+        print("\n당신은 동굴에서 탈출했습니다. 당신의 선택을 바탕으로 MBTI 성향을 분석합니다...")
+        if self.T_score > self.F_score:
+            print("당신의 MBTI 성향은 '사고(T)'입니다.")
+        else:
+            print("당신의 MBTI 성향은 '감정(F)'입니다.")
+        print("게임이 종료되었습니다.")
+
+# 게임 객체 생성 및 시작
+game = Game()
+game.start_game()
+```
 
