--- a/Microbit/00.Traing_01.md
+++ b/Microbit/00.Traing_01.md
@@ -1,1 +1,23 @@
+# 마이크로 비트 + 파이썬 연습문제_01
+```
+# Imports go at the top
+from microbit import *
 
+display.show(Image('00300:'
+                   '03630:'
+                   '36963:'
+                   '03630:'
+                   '00300'))
+
+
+while True:
+    a=int(input('a값을 입력해주세요:'))
+    b=int(input('b값을 입력해주세요:'))
+    c=int(input('c값을 입력해주세요:'))
+
+    print("덧셉 결과는 {}입니다.".format(a+b))
+    print("덧셉 결과는 {}입니다.".format(a-b))
+    print("덧셉 결과는 {}입니다.".format(a*b))
+    print("덧셉 결과는 {}입니다.".format(a/b))
+    
+```
