--- a/Microbit/00.Traing_00.md
+++ b/Microbit/00.Traing_00.md
@@ -21,3 +21,29 @@ while True:
     print("덧셉 결과는 {}입니다.".format(a/b))
     
 ```
+
+*계산기 연습문제
+```
+from microbit import*
+x=int(input('x값을 입력해주세요:'))
+y=int(input('y값을 입력해주세요:'))
+
+def carculator(x,y):
+    print('''
+    1번: 덧셈
+    2번: 뺄셈
+    3번: 곱하기
+    4번: 나누기
+    5번: 몫
+    6번: 나머지
+    7번: 지수계산''')
+    num=input('번호를 골라주세요:')
+    if num=='1':
+        print(x+y)
+        display.scroll(x+y)
+
+##if 뒤를 입력하여 계산기를 완성해 보세요.
+        
+carculator(x,y)
+
+```
