--- a/Microbit/01.Traing_01.md
+++ b/Microbit/01.Traing_01.md
@@ -1,6 +1,6 @@
 # For문 예제
 
-* 예제_01
+* 예제코드_01
 ```
 from microbit import *
 
@@ -11,7 +11,7 @@ for y in range(5):
 display.clear()
 ```
 
-* 예제_02
+* 예제코드_02
 ```
 from microbit import *
 while True:
@@ -27,7 +27,7 @@ while True:
             sleep(50)
 ```
 
-* 예제_03
+* 예제코드_03
 ```
 from microbit import *
 
@@ -43,7 +43,7 @@ while True:
             display.clear()
 ```
 
-* 예제_04
+* 예제코드_04
 ```
 from microbit import *
 
