--- a/Com_vision/Microbit+CV+Serial/000.수신 연습(마빗).md
+++ b/Com_vision/Microbit+CV+Serial/000.수신 연습(마빗).md
@@ -1,24 +1,21 @@
 # 마이크로 비트 시리얼 통신(UART) 수신
 
-*수정중
+* 마빗의 baudrate 9600입니다. 아두이노는 115200입니다.
+* 주석을 확인하고 마빗 송신부의 시리얼 통신 파이썬 코드를 이해해 봅시다.
+* 가장 중요한 점은 그냥 문자를 수신하면 작동이 되지 않습니다.
+* pyserial에서 byte값으로 보내기 떄문에 수신 문자 또한 byte값으로 변경해주서야 합니다. 
 
 ```
-# Imports go at the top
 from microbit import *
-
-uart.init(9600)
-# Code in a 'while True:' loop repeats forever
+uart.init(9600) #마이크로 비트 파이썬 사라얼 통신 초기화 코드입니다. tx, rx는 맞추어 줄 필요 없습니다.
 while True:
-    if uart.any():
-        mes=uart.read()
-        if mes=='0':
-            
+    if uart.any():  #어떤 데이터 값이라도 들어오면 실행시키라는 의미의 함수입니다.
+        mes = uart.readline()   # uart.read()함수를 사용하면 작동이 안됩니다. 문자로 들어오기 때문에 uart 클래스에서 readline()으로 읽어주어야 합니다.
+        if mes == b'1':   #'1'로 받으면, 들어오는 값이 btye 주소안의 값이기 때문에 작동이 안됩니다. b'1'과 같이 b함수를 사용하여 byte로 수정해주어야 합니다.
             display.show(Image.HEART)
             sleep(1000)
-            
-        if mes=='1':
-            
-            display.show(Image.CONFUSED)
-            sleep(1000)   
-   
+        elif mes == b'2':
+            display.show(Image.NO)   #'X' 이미지 표시
+            sleep(1000)
+
 ```
