--- a/Com_vision/Microbit+CV+Serial/000.송신 연습(CV).md
+++ b/Com_vision/Microbit+CV+Serial/000.송신 연습(CV).md
@@ -1,3 +1,94 @@
 # 컴퓨터 CV 송신
+
+* OpenCV의 Mediapipe를 활용하여 마이크로 비트를 컨트롤 하는 코드입니다.
+* 랜드마크 4,8거리에 따라 조건을 주고 시리얼 통신을 합니다.
+* ser.write((val + '\n').encode("ascii"))이 부분의 코드가 핵심입니다.
+* 보내려는 값을 아스키코드로 인코딩하여 송신하여야 합니다.
+* 다른 부분은 OpenCV 연습 예제를 참고하십시오.
+
 ```
+##랜드마크 4번과 8번의 거리를 측정하여 시리얼 통신 1,2 값을 보내는 코드입니다. 
+
+import cv2
+import mediapipe as mp
+import numpy as np
+import serial
+import time
+
+# Serial 설정
+ser = serial.Serial('COM8', 9600, timeout=2)
+
+# 시리얼 포트가 열려있는지 확인
+if ser.is_open:
+    print("Serial port is open.")
+else:
+    print("Failed to open the serial port.")
+
+# Mediapipe 설정
+mp_hands = mp.solutions.hands
+hands = mp_hands.Hands()
+mp_drawing = mp.solutions.drawing_utils
+
+# 시리얼 데이터 전송 함수
+def send_value(val):
+    if ser.is_open:
+        ser.write((val + '\n').encode("ascii"))
+        print(f"Sent: {val}")
+    else:
+        print("Failed to send the value. The serial port is not open.")
+
+# 웹캠에서 영상을 가져옴
+cap = cv2.VideoCapture(0)
+
+# 잠시 대기
+time.sleep(2)
+
+try:
+    while cap.isOpened():
+        ret, frame = cap.read()
+
+        if not ret:
+            continue
+
+        # 이미지 전처리
+        frame = cv2.flip(frame, 1)
+        image = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)
+
+        # 손의 랜드마크를 찾음
+        results = hands.process(image)
+
+        if results.multi_hand_landmarks:
+            for landmarks in results.multi_hand_landmarks:
+                mp_drawing.draw_landmarks(frame, landmarks, mp_hands.HAND_CONNECTIONS)
+
+                x1, y1 = int(landmarks.landmark[4].x * frame.shape[1]), int(landmarks.landmark[4].y * frame.shape[0])
+                x2, y2 = int(landmarks.landmark[8].x * frame.shape[1]), int(landmarks.landmark[8].y * frame.shape[0])
+                
+                distance = np.sqrt((x2 - x1)**2 + (y2 - y1)**2)
+                distance_text = f"Distance: {distance:.2f}"
+                cv2.putText(frame, distance_text, (50, 50), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)
+
+                # 거리가 100 이하일 경우, 시리얼 포트로 '1'을 전송
+                if distance < 100:
+                    send_value('1')
+                    time.sleep(0.2)   
+                else:
+                    send_value('2')
+                    time.sleep(0.2)  
+
+        # 영상을 화면에 표시
+        cv2.imshow('Frame', frame)
+
+        # 'q' 키를 눌렀을 때 루프 종료
+        if cv2.waitKey(10) & 0xFF == ord('q'):
+            break
+
+except Exception as e:
+    print(f"An error occurred: {e}")
+
+finally:
+    hands.close()
+    cap.release()
+    cv2.destroyAllWindows()
+    ser.close()
 ```
