--- a/Com_vision/Microbit+CV+Serial/000.수신 연습(마빗).md
+++ b/Com_vision/Microbit+CV+Serial/000.수신 연습(마빗).md
@@ -19,3 +19,99 @@ while True:
             sleep(1000)
 
 ```
+
+
+##25개 25xLED, Mediapipe 랜드마크로 컨트롤 하기
+```
+from microbit import *
+
+uart.init(9600) #마이크로 비트 파이썬 사라얼 통신 초기화 코드입니다. tx, rx는 맞추어 줄 필요 없습니다.
+while True:
+    if uart.any():  #어떤 데이터 값이라도 들어오면 실행시키라는 의미의 함수입니다.
+        mes = uart.readline()   # uart.read()함수를 사용하면 작동이 안됩니다. 문자로 들어오기 때문에 uart 클래스에서 readline()으로 읽어주어야 합니다.
+        
+        #0행 LED
+        if mes == b'0,0':   #'1'로 받으면, 들어오는 값이 btye 주소안의 값이기 때문에 작동이 안됩니다. b'1'과 같이 b함수를 사용하여 byte로 수정해주어야 합니다.
+            display.set_pixel(0,0,9)
+            sleep(500)
+        elif mes == b'0,1':
+            display.set_pixel(0,1,9)
+            sleep(500)
+        elif mes == b'0,2':
+            display.set_pixel(0,2,9)
+            sleep(500)
+        elif mes == b'0,3':
+            display.set_pixel(0,3,9)
+            sleep(500)
+        elif mes == b'0,4':
+            display.set_pixel(0,4,9)
+            sleep(500)
+        
+        #1행 LED
+        elif mes == b'1,0':
+            display.set_pixel(1,0,9)
+            sleep(500)
+        elif mes == b'1,1':
+            display.set_pixel(1,1,9)
+            sleep(500)
+        elif mes == b'1,2':
+            display.set_pixel(1,2,9)
+            sleep(500)
+        elif mes == b'1,3':
+            display.set_pixel(1,3,9)
+            sleep(500)
+        elif mes == b'1,4':
+            display.set_pixel(1,4,9)
+            sleep(500)
+
+        #2행 LED
+        elif mes == b'2,0':
+            display.set_pixel(2,0,9)
+            sleep(500)
+        elif mes == b'2,1':
+            display.set_pixel(2,1,9)
+            sleep(500)
+        elif mes == b'2,2':
+            display.set_pixel(2,2,9)
+            sleep(500)
+        elif mes == b'2,3':
+            display.set_pixel(2,3,9)
+            sleep(500)
+        elif mes == b'2,4':
+            display.set_pixel(2,4,9)
+            sleep(500)
+
+        #3행 LED
+        elif mes == b'3,0':
+            display.set_pixel(3,0,9)
+            sleep(500)
+        elif mes == b'3,1':
+            display.set_pixel(3,1,9)
+            sleep(500)
+        elif mes == b'3,2':
+            display.set_pixel(3,2,9)
+            sleep(500)
+        elif mes == b'3,3':
+            display.set_pixel(3,3,9)
+            sleep(500)
+        elif mes == b'3,4':
+            display.set_pixel(3,4,9)
+            sleep(500)
+
+        #4행 LED
+        elif mes == b'4,0':
+            display.set_pixel(4,0,9)
+            sleep(500)
+        elif mes == b'4,1':
+            display.set_pixel(4,1,9)
+            sleep(500)
+        elif mes == b'4,2':
+            display.set_pixel(4,2,9)
+            sleep(500)
+        elif mes == b'4,3':
+            display.set_pixel(4,3,9)
+            sleep(500)
+        elif mes == b'4,4':
+            display.set_pixel(4,4,9)
+            sleep(500)
+```
