--- a/Com_vision/Microbit+CV+Serial/000.송신 연습(CV).md
+++ b/Com_vision/Microbit+CV+Serial/000.송신 연습(CV).md
@@ -7,7 +7,7 @@
 * 다른 부분은 OpenCV 연습 예제를 참고하십시오.
 
 ```
-##랜드마크 4번과 8번의 거리를 측정하여 시리얼 통신 1,2 값을 보내는 코드입니다. 
+## 랜드마크 4번과 8번의 거리를 측정하여 시리얼 통신 1,2 값을 보내는 코드입니다. 
 
 import cv2
 import mediapipe as mp
@@ -91,4 +91,228 @@ finally:
     cap.release()
     cv2.destroyAllWindows()
     ser.close()
+```
+
+
+## 25 x LED 마이크로 비트 컨트롤 코드
+```
+import cv2
+import mediapipe as mp
+import serial
+import keyboard
+import time
+
+# Serial 설정
+ser = serial.Serial('COM8', 9600, timeout=2)
+
+# 시리얼 포트가 열려있는지 확인
+if ser.is_open:
+    print("Serial port is open.")
+else:
+    print("Failed to open the serial port.")
+    
+    
+# Mediapipe 손 검출 라이브러리 초기화
+mp_hands = mp.solutions.hands
+hands = mp_hands.Hands()
+mp_drawing = mp.solutions.drawing_utils
+
+
+# 시리얼 데이터 전송 함수
+def send_value(val):
+    if ser.is_open:
+        ser.write((val + '\n').encode("ascii"))
+        print(f"Sent: {val}")
+    else:
+        print("Failed to send the value. The serial port is not open.")
+        
+
+# 웹캠으로부터 영상을 받아오기 위한 코드
+cap = cv2.VideoCapture(0)
+
+# 채도를 0으로 설정
+cap.set(cv2.CAP_PROP_SATURATION, 0)
+
+# 잠시 대기
+time.sleep(2)
+
+while cap.isOpened():
+    ret, frame = cap.read()
+
+    if not ret:
+        continue
+
+    # Mediapipe는 RGB 이미지를 사용하기 때문에, BGR에서 RGB로 변환
+    frame = cv2.flip(frame, 1)
+    image = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)
+
+    # 손을 검출
+    results = hands.process(image)
+
+    # 검출된 손의 랜드마크를 화면에 그림
+    if results.multi_hand_landmarks:
+        for landmarks in results.multi_hand_landmarks:
+            mp_drawing.draw_landmarks(frame, landmarks, mp_hands.HAND_CONNECTIONS)
+            
+            # Landmark 8의 좌표 출력
+            lm_x, lm_y = landmarks.landmark[8].x, landmarks.landmark[8].y
+
+            # 25개의 작은 정사각형 그리기
+            grid_size = 5
+            square_size = int(frame.shape[1] * 0.4) // grid_size
+            start_point_x = int(frame.shape[1] * 0.5 - ((square_size * grid_size) / 2))
+            start_point_y = int(frame.shape[0] * 0.5 - ((square_size * grid_size) / 2))
+
+            for i in range(grid_size):
+                for j in range(grid_size):
+                    top_left_point = (start_point_x + square_size * i, start_point_y + square_size * j)
+                    bottom_right_point = (start_point_x + square_size * (i + 1), start_point_y + square_size * (j + 1))
+                    cv2.rectangle(frame, top_left_point, bottom_right_point, (0, 245, 0), 3)
+                    
+                    # 각 사각형 범위 확인 및 좌표 출력
+                    if top_left_point[0]/frame.shape[1] < lm_x < bottom_right_point[0]/frame.shape[1] and top_left_point[1]/frame.shape[0] < lm_y < bottom_right_point[1]/frame.shape[0]:
+                        if i == 0 and j == 0:
+                            print("0,0")
+                            send_value('0,0')
+                            time.sleep(0.2) 
+                        
+                        elif i == 0 and j == 1:
+                            print("0,1")
+                            send_value('0,1')
+                            time.sleep(0.2)
+                            
+                        elif i == 0 and j == 2:
+                            print("0,2")
+                            send_value('0,2')
+                            time.sleep(0.2)
+                            
+                        elif i == 0 and j == 3:
+                            print("0,3")
+                            send_value('0,3')
+                            time.sleep(0.2)
+                            
+                        elif i == 0 and j == 4:
+                            print("0,4")
+                            send_value('0,4')
+                            time.sleep(0.2)
+                            
+                        elif i == 1 and j == 0:
+                            print("1,0")
+                            send_value('1,0')
+                            time.sleep(0.2)
+                            
+                        elif i == 1 and j == 1:
+                            print("1,1")
+                            send_value('1,1')
+                            time.sleep(0.2)
+                            
+                        elif i == 1 and j == 2:
+                            print("1,2")
+                            send_value('1,2')
+                            time.sleep(0.2)
+                            
+                        elif i == 1 and j == 3:
+                            print("1,3")
+                            send_value('1,3')
+                            time.sleep(0.2)
+                            
+                        elif i == 1 and j == 4:
+                            print("1,4")
+                            send_value('1,4')
+                            time.sleep(0.2)
+                            
+                        elif i == 2 and j == 0:
+                            print("2,0")
+                            send_value('2,0')
+                            time.sleep(0.2)
+                            
+                        elif i == 2 and j == 1:
+                            print("2,1")
+                            send_value('2,1')
+                            time.sleep(0.2)
+                            
+                        elif i == 2 and j == 2:
+                            print("2,2")
+                            send_value('2,2')
+                            time.sleep(0.2)
+                            
+                        elif i == 2 and j == 3:
+                            print("2,3")
+                            send_value('2,3')
+                            time.sleep(0.2)
+                            
+                        elif i == 2 and j == 4:
+                            print("2,4")
+                            send_value('2,4')
+                            time.sleep(0.2)
+                            
+                        elif i == 3 and j == 0:
+                            print("3,0")
+                            send_value('3,0')
+                            time.sleep(0.2)
+                            
+                        elif i == 3 and j == 1:
+                            print("3,1")
+                            send_value('3,1')
+                            time.sleep(0.2)
+                            
+                        elif i == 3 and j == 2:
+                            print("3,2")
+                            send_value('3,2')
+                            time.sleep(0.2)
+                            
+                        elif i == 3 and j == 3:
+                            print("3,3")
+                            send_value('3,3')
+                            time.sleep(0.2)
+                            
+                        elif i == 3 and j == 4:
+                            print("3,4")
+                            send_value('3,4')
+                            time.sleep(0.2)
+                            
+                        elif i == 4 and j == 0:
+                            print("4,0")
+                            send_value('4,0')
+                            time.sleep(0.2)
+                            
+                        elif i == 4 and j == 1:
+                            print("4,1")
+                            send_value('4,1')
+                            time.sleep(0.2)
+                            
+                        elif i == 4 and j == 2:
+                            print("4,2")
+                            send_value('4,2')
+                            time.sleep(0.2)
+                            
+                        elif i == 4 and j == 3:
+                            print("4,3")
+                            send_value('4,3')
+                            time.sleep(0.2)
+                            
+                        elif i == 4 and j == 4:
+                            print("4,4")
+                            send_value('4,4')
+                            time.sleep(0.2)
+                            
+
+
+                    # 사각형 안에 좌표 넣기
+                    coordinate = f"({i},{j})"
+                    number_position = (top_left_point[0] + 24, top_left_point[1] + square_size // 2 + 5)
+                    cv2.putText(frame, coordinate, number_position, cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 1, cv2.LINE_AA)
+    
+    # 프레임 크기를 400x225으로 변경
+    frame_resized = cv2.resize(frame, (400, 225))
+    
+    # 영상을 화면에 출력
+    cv2.imshow('Hand Tracking', frame_resized)
+
+    if cv2.waitKey(10) & 0xFF == ord('q'):
+        break
+
+hands.close()
+cap.release()
+cv2.destroyAllWindows()
 ```
