--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -2,30 +2,84 @@
 ## 배우기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+
+text = "Hello"
+display.scroll(text)
 ```
 
 *샘플코드_02
 ```
+from microbit import *
+
+pattern = Image("05050:"
+                "05050:"
+                "05050:"
+                "99999:"
+                "09990")
+
+display.show(pattern)
 ```
 
 *샘플코드_03
 ```
+from microbit import *
+
+while True:
+    display.scroll(temperature())
 ```
 
 ## 이해하기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+
+num_01= 1
+num_02= 2
+text= 'Hello'
+
+display.show(num_01)
+sleep(1000)
+display.show(num_02)
+sleep(1000)
+display.scroll(text)
+sleep(1000)
 ```
 
 *샘플코드_02
 ```
+from microbit import *
+
+Led_square = Image("99999:"
+                    "88888:"
+                    "77777:"
+                    "66666:"
+                    "55555")
+
+display.show(Led_square)
 ```
 
 *샘플코드_03
 ```
+from microbit import *
+
+while True:
+    temp= temperature()
+    display.scroll(temp)
+    sleep(3000)
+    display.clear()
+    sleep(1000)
 ```
 
 ## 적용하기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+import time
+
+A='Hello world!'
+display.scroll(A)
+
+time.sleep(3)
+display.clear()
 ```
