Update 02.입력과 출력, 함수의 이해.md

--- a/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
+++ b/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
@@ -2,30 +2,92 @@
 ## 배우기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+word_input=input("word:")
+
+while True:
+    display.scroll(word_input)
+    sleep(1000)
 ```
 
 *샘플코드_02
 ```
+from microbit import *
+
+while True:
+    temp=temperature()
+    print(temp)
+    sleep(1000)
 ```
 
 *샘플코드_03
 ```
+from microbit import *
+
+while True:
+    noise=microphone.sound_level()
+    print(noise)
+    display.scroll(noise)
+    sleep(100)
 ```
 
 ## 이해하기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+
+while True:
+    word_a=input("num_1:")
+    word_b=input("num_2:")
+    display.scroll(word_a)
+    display.show(word_b)
+    sleep(1000)
 ```
 
 *샘플코드_02
 ```
+from microbit import *
+while True:
+    temp = temperature()
+    print("Temperature:", temp)
+    
+    x = accelerometer.get_x()
+    y = accelerometer.get_y()
+    z = accelerometer.get_z()
+    print("Acceleration - X:", x, "Y:", y, "Z:", z)
+    sleep(1000)
 ```
 
 *샘플코드_03
 ```
+from microbit import *
+while True:
+    noise = microphone.sound_level()
+    print(noise)
+    display.scroll(noise)
+    display.clear()
+ 
+    display.set_pixel(0, 2, 9 if noise > 50 else 0)
+    display.set_pixel(1, 2, 9 if noise > 40 else 0)
+    display.set_pixel(2, 2, 9 if noise > 30 else 0)
+    display.set_pixel(3, 2, 9 if noise > 20 else 0)
+    display.set_pixel(4, 2, 9 if noise > 10 else 0)
+    sleep(1000)
 ```
 
 ## 적용하기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+
+word_A = input("Enter word A: ")
+word_B = input("Enter word B: ")
+
+while True:
+    display.show(word_A)
+    sleep(1000)
+    display.clear()
+    display.show(word_B)
+    sleep(1000)
+    display.clear()
 ```
