--- a/Microbit/GPT+Microbit/03.자료형.md
+++ b/Microbit/GPT+Microbit/03.자료형.md
@@ -2,30 +2,115 @@
 ## 배우기 샘플코드
 *샘플코드_01
 ```
+var_01=1
+var_02='1'
+var_03=3.14
+var_04=True
+var_05=False
+print(type(var_01))
+print(type(var_02))
+print(type(var_03))
+print(type(var_04))
+print(type(var_05))
 ```
 
 *샘플코드_02
 ```
+from microbit import *
+
+var_01=1
+var_02='Hello world'
+var_03=3.14
+var_04=True
+
+var_01_str=(type(var_01))
+var_02_str=(type(var_02))
+var_03_str=(type(var_03))
+var_04_str=(type(var_04))
+
+display.scroll(str(var_01_str))
+display.scroll(str(var_02_str))
+display.scroll(str(var_03_str))
+display.scroll(str(var_04_str))
 ```
 
 *샘플코드_03
 ```
+from microbit import *
+while True:
+    if button_a.was_pressed():
+        var=int(input("정수를 입력해주세요:"))
+        display.scroll(str(type(var)))
+        display.clear()
+    
+    if button_b.was_pressed():
+        var=input("문자를 입력해주세요:")
+        display.scroll(str(type(var)))
+        display.clear()
 ```
 
 ## 이해하기 샘플코드
 *샘플코드_01
 ```
+var_01, var_02, var_03, var_04='1', 1, 3.14, True
+print(type(var_01), type(var_02), type(var_03), type(var_04))
+
+#변수의 입력 방법 변경
 ```
 
 *샘플코드_02
 ```
+from microbit import *
+import music
+
+var_01, var_02, var_03, var_04='1', 1, 3.14, True
+var_01_str, var_02_str=type(var_01), type(var_02)
+display.scroll(str(var_01_str))
+display.show(str(var_02_str))
+music.play(music.BA_DING)
 ```
 
 *샘플코드_03
 ```
+from microbit import *
+import music
+while True:
+    if button_a.was_pressed():
+        var=int(input("정수를 입력해주세요:"))
+        display.scroll(str(type(var)))
+        display.clear()
+    
+    if button_b.was_pressed():
+        var=input("문자를 입력해주세요:")
+        display.scroll(str(type(var)))
+        display.clear()
+    if button_a.is_pressed() or button_b.is_pressed():
+        music.play(music.JUMP_UP)
+        break
 ```
 
 ## 적용하기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+import music
+while True:
+    data = input("데이터 값을 입력하세요: ")  
+    try:
+        data = eval(data) 
+        data_type = type(data).__name__  
+        display.scroll(data_type)  
+        # 데이터 유형에 따라 다른 소리 출력
+        if data_type == 'int':
+            music.play(music.POWER_UP)
+        elif data_type == 'str':
+            music.play(music.POWER_DOWN)
+        elif data_type == 'float':
+            music.play(music.JUMP_UP)
+        elif data_type == 'bool':
+            music.play(music.JUMP_DOWN)
+        else:
+            music.play(music.RINGTONE)
+    except Exception as e:
+        display.scroll("Error") 
 ```
