--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -2,10 +2,48 @@
 ## 배우기 샘플코드
 *샘플코드_01
 ```
+num_01=int(input('첫번째 숫자입력:'))
+num_02=int(input('두번째 숫자입력:'))
+
+Add=num_01+num_02
+Sub=num_01-num_02
+Mul=num_01*num_02
+Div=num_01/num_02
+Quo=num_01//num_02
+Rem=num_01%num_02
+Pow=num_01**num_02
+ 
+print(num_01+num_02)
+print(num_01-num_02)
+print(num_01*num_02)
+print(num_01/num_02)
+print(num_01//num_02)
+print(num_01%num_02)
+print(num_01**num_02)
+```
+*샘플코드_01의 변수를 한줄로 표현하는 코드로 수정
+```
+num_01=int(input('첫 번째 숫자입력:'))
+num_02=int(input('두 번째 숫자입력:'))
+Add, Sub, Mul, Div = num_01+num_02, num_01-num_02, num_01*num_02, num_01/num_02
+Quo, Rem, Pow=num_01//num_02, num_01%num_02, num_01**num_02
+print(Add, Sub, Mul, Div, Quo, Rem, Pow)
 ```
 
 *샘플코드_02
 ```
+from microbit import*
+
+num_01=int(input('첫 번째 숫자입력:'))
+num_02=int(input('두 번째 숫자입력:'))
+
+display.scroll(num_01==num_02)
+display.scroll(num_01!=num_02)
+
+print(num_01>num_02)
+print(num_01<num_02)
+print(num_01>=num_02)
+print(num_01>=num_02)
 ```
 
 *샘플코드_03
