Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -12,20 +12,45 @@
 ```
 ```
 
-## 이해하기 샘플코드
-*샘플코드_01
+*샘플코드_04
 ```
 ```
 
-*샘플코드_02
+*샘플코드_05
 ```
 ```
 
-*샘플코드_03
+*샘플코드_06
 ```
 ```
 
-## 적용하기 샘플코드
-*샘플코드_01
+
+*샘플코드_07
+*z축 가속도를 읽어오는 코드
 ```
+from microbit import *
+
+def map(value, fromMin, fromMax, toMin, toMax):
+    fromRange = fromMax - fromMin
+    toRange = toMax - toMin
+    valueScaled = float(value - fromMin) / float(fromRange)
+    return toMin + (valueScaled * toRange)
+
+while True:
+    # 가속도 센서로 Z축 가속도를 읽어옵니다.
+    z_acceleration = accelerometer.get_z() 
+    z_acceleration_trans=map(z_acceleration, 0, 1023, 0, 98)/10
+    z_acceleration_trans=round(z_acceleration_trans, 2)
+    print(z_acceleration_trans)
+    sleep(1000)
+"""
+#마이크로비트에는 3축 가속도 센서가 기본적으로 내장되어 있습니다.
+
+마이크로비트 가속도 센서의 측정 범위는 –2 g부터 2 g까지입니다.
+예를 들어, 마이크로비트의 LED면이 위로 가도록 위치한 경우, 지구의 중력가속도는 z축 방향의 반대 방향을 향하기 때문에 다음과 같이 측정됩니다.
+
+x축 = 0
+y축 = 0
+z축 = -1023 (국제단위계 m/2^2)으로 환산
+"""
 ```
