--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -1,6 +1,7 @@
 #자료 파트 코드
 ## 배우기 샘플코드
-*샘플코드_01
+* 샘플코드_01
+* 산술 연산자 출력하기기
 ```
 num_01=int(input('첫번째 숫자입력:'))
 num_02=int(input('두번째 숫자입력:'))
@@ -21,7 +22,7 @@ print(num_01//num_02)
 print(num_01%num_02)
 print(num_01**num_02)
 ```
-*샘플코드_01의 변수를 한줄로 표현하는 코드로 수정
+* 샘플코드_01의 변수를 한줄로 표현하는 코드로 수정
 ```
 num_01=int(input('첫 번째 숫자입력:'))
 num_02=int(input('두 번째 숫자입력:'))
@@ -30,7 +31,8 @@ Quo, Rem, Pow=num_01//num_02, num_01%num_02, num_01**num_02
 print(Add, Sub, Mul, Div, Quo, Rem, Pow)
 ```
 
-*샘플코드_02
+* 샘플코드_02
+* 비교 연산자 결과 출력하기
 ```
 from microbit import*
 
@@ -46,24 +48,108 @@ print(num_01>=num_02)
 print(num_01>=num_02)
 ```
 
-*샘플코드_03
+* 샘플코드_03
+* 비교 연산자 변수를 활용하여 출력하기
 ```
+from microbit import *
+
+num_01 = int(input('첫 번째 숫자 입력:'))
+num_02 = int(input('두 번째 숫자 입력:'))
+
+# 대입 연산자를 사용하여 결과를 저장합니다.
+equal_result = num_01 == num_02
+not_equal_result = num_01 != num_02
+
+# 결과를 출력합니다.
+display.scroll(str(equal_result))
+display.scroll(str(not_equal_result))
+
+# 할당 연산자를 사용하여 결과를 저장합니다.
+greater_result = num_01 > num_02
+less_result = num_01 < num_02
+greater_or_equal_result = num_01 >= num_02
+less_or_equal_result = num_01 <= num_02
+
+# 결과를 출력합니다.
+print(str(greater_result))
+print(str(less_result))
+print(str(greater_or_equal_result))
+print(str(less_or_equal_result))
 ```
 
 ## 이해하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
+from microbit import *
+
+num_01=int(input('첫 번째 숫자입력:'))
+num_02=int(input('두 번째 숫자입력:'))
+Add, Sub, Mul, Div = num_01+num_02, num_01-num_02, num_01*num_02, num_01/num_02
+
+Quo, Rem, Pow=num_01//num_02, num_01%num_02, num_01**num_02
+print(Add, Sub, Mul, Div)
+
+display.scroll(Add)
+display.scroll(Sub)
+display.scroll(Mul)
+display.scroll(Div)
+display.scroll(Quo)
+display.scroll(Rem)
+display.scroll(Pow)
 ```
 
-*샘플코드_02
+* 샘플코드_02
+* 양음홀짝 판별 코드
 ```
+from microbit import *
+
+num = int(input('숫자 입력:'))
+
+is_positive = num > 0  # 숫자가 양수인지 확인
+is_negative = num < 0 # 숫자가 음수인지 확인
+is_even = num % 2 == 0  # 숫자가 짝수인지 확인
+is_odd = num % 2 !=0 # 숫자가 홀수인지 확인
+
+# 결과 출력
+print(is_positive)
+print(is_negative)
+print(is_even)
+print(is_odd)
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
+from microbit import *
+
+# 세 개의 숫자를 입력받습니다.
+num_01 = int(input('첫 번째 숫자 입력:'))
+num_02 = int(input('두 번째 숫자 입력:'))
+num_03 = int(input('세 번째 숫자 입력:'))
+
+# 대입 연산자를 사용하여 결과를 저장합니다.
+equal_result = num_01 == num_02 == num_03
+not_equal_result = num_01 != num_02 != num_03
+
+# 'and' 연산자를 사용하여 모든 조건을 비교합니다.
+greater_result = num_01 > num_02 and num_02 > num_03
+less_result = num_01 < num_02 and num_02 < num_03
+greater_or_equal_result = num_01 >= num_02 and num_02 >= num_03
+less_or_equal_result = num_01 <= num_02 and num_02 <= num_03
+
+# 마이크로 비트에 결과를 출력합니다.
+display.scroll(str(equal_result))
+display.scroll(str(not_equal_result))
+
+
+# 시리얼 모니터에 결과를 출력합니다.
+print(str(greater_result))
+print(str(less_result))
+print(str(greater_or_equal_result))
+print(str(less_or_equal_result))
 ```
 
 ## 적용하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
+
 ```
