--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -1,7 +1,7 @@
 #자료 파트 코드
 ## 배우기 샘플코드
 * 샘플코드_01
-* 산술 연산자 출력하기기
+* 산술 연산자 출력하기
 ```
 num_01=int(input('첫번째 숫자입력:'))
 num_02=int(input('두번째 숫자입력:'))
