--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -1,6 +1,6 @@
 #자료 파트 코드
 ## 배우기 샘플코드
-* 샘플코드_01
+### 샘플코드_01
 * 산술 연산자 출력하기
 ```
 num_01=int(input('첫번째 숫자입력:'))
@@ -22,7 +22,7 @@ print(num_01//num_02)
 print(num_01%num_02)
 print(num_01**num_02)
 ```
-* 샘플코드_01의 변수를 한줄로 표현하는 코드로 수정
+### 샘플코드_01의 변수를 한줄로 표현하는 코드로 수정
 ```
 num_01=int(input('첫 번째 숫자입력:'))
 num_02=int(input('두 번째 숫자입력:'))
@@ -31,7 +31,7 @@ Quo, Rem, Pow=num_01//num_02, num_01%num_02, num_01**num_02
 print(Add, Sub, Mul, Div, Quo, Rem, Pow)
 ```
 
-* 샘플코드_02
+### 샘플코드_02
 * 비교 연산자 결과 출력하기
 ```
 from microbit import*
@@ -48,7 +48,7 @@ print(num_01>=num_02)
 print(num_01>=num_02)
 ```
 
-* 샘플코드_03
+### 샘플코드_03
 * 비교 연산자 변수를 활용하여 출력하기
 ```
 from microbit import *
@@ -78,7 +78,7 @@ print(str(less_or_equal_result))
 ```
 
 ## 이해하기 샘플코드
-* 샘플코드_01
+### 샘플코드_01
 ```
 from microbit import *
 
@@ -98,7 +98,7 @@ display.scroll(Rem)
 display.scroll(Pow)
 ```
 
-* 샘플코드_02
+### 샘플코드_02
 * 양음홀짝 판별 코드
 ```
 from microbit import *
@@ -117,7 +117,7 @@ print(is_even)
 print(is_odd)
 ```
 
-* 샘플코드_03
+### 샘플코드_03
 ```
 from microbit import *
 
@@ -149,7 +149,7 @@ print(str(less_or_equal_result))
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+### 샘플코드_01
 ```
 
 ```
