--- a/Microbit/GPT+Microbit/03.자료형.md
+++ b/Microbit/GPT+Microbit/03.자료형.md
@@ -1,6 +1,7 @@
 # 자료형 파트 코드
 ## 배우기 샘플코드
-*샘플코드_01
+### 정수,문자,실수,참거짓 타입 알아보기
+* 샘플코드_01
 ```
 var_01=1
 var_02='1'
@@ -14,7 +15,8 @@ print(type(var_04))
 print(type(var_05))
 ```
 
-*샘플코드_02
+### 데이터 타입결과 변수로 알아보기
+* 샘플코드_02
 ```
 from microbit import *
 
@@ -34,7 +36,8 @@ display.scroll(str(var_03_str))
 display.scroll(str(var_04_str))
 ```
 
-*샘플코드_03
+### A,B 버튼 활용 정수, 문자 판별기
+* 샘플코드_03
 ```
 from microbit import *
 while True:
@@ -50,7 +53,7 @@ while True:
 ```
 
 ## 이해하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 var_01, var_02, var_03, var_04='1', 1, 3.14, True
 print(type(var_01), type(var_02), type(var_03), type(var_04))
@@ -58,7 +61,7 @@ print(type(var_01), type(var_02), type(var_03), type(var_04))
 #변수의 입력 방법 변경
 ```
 
-*샘플코드_02
+* 샘플코드_02
 ```
 from microbit import *
 import music
@@ -70,7 +73,7 @@ display.show(str(var_02_str))
 music.play(music.BA_DING)
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
 from microbit import *
 import music
