Update 02.입력과 출력, 함수의 이해.md

--- a/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
+++ b/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
@@ -1,6 +1,7 @@
 # 입력과 출력, 함수의 이해 파트 코드
 ## 배우기 샘플코드
-*샘플코드_01
+### 마이크로 비트 문자 전광판 만들기
+* 샘플코드_01
 ```
 from microbit import *
 word_input=input("word:")
@@ -10,7 +11,8 @@ while True:
     sleep(1000)
 ```
 
-*샘플코드_02
+### 온도 측정 결과 시리얼 모니터 출력
+* 샘플코드_02
 ```
 from microbit import *
 
@@ -20,7 +22,8 @@ while True:
     sleep(1000)
 ```
 
-*샘플코드_03
+### 소리 측정 결과 LED에 출력
+* 샘플코드_03
 ```
 from microbit import *
 
@@ -32,7 +35,7 @@ while True:
 ```
 
 ## 이해하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 from microbit import *
 
@@ -44,7 +47,7 @@ while True:
     sleep(1000)
 ```
 
-*샘플코드_02
+* 샘플코드_02
 ```
 from microbit import *
 while True:
@@ -58,7 +61,7 @@ while True:
     sleep(1000)
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
 from microbit import *
 while True:
@@ -76,7 +79,7 @@ while True:
 ```
 
 ## 적용하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 from microbit import *
 
