--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -1,6 +1,7 @@
 # 변수의 이해 파트 코드
 ## 배우기 샘플코드
-*샘플코드_01
+### 문자형 데이터 LED로 출력하기
+* 샘플코드_01
 ```
 from microbit import *
 
@@ -8,7 +9,8 @@ text = "Hello"
 display.scroll(text)
 ```
 
-*샘플코드_02
+### 전면 25개 LED 제어하기(0~9값 활용)
+* 샘플코드_02
 ```
 from microbit import *
 
@@ -21,7 +23,8 @@ pattern = Image("05050:"
 display.show(pattern)
 ```
 
-*샘플코드_03
+### 전면 25개 LED 제어하기(0~9값 활용)
+* LED에 온도센서 값 불러오기
 ```
 from microbit import *
 
@@ -30,7 +33,7 @@ while True:
 ```
 
 ## 이해하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 from microbit import *
 
@@ -46,7 +49,7 @@ display.scroll(text)
 sleep(1000)
 ```
 
-*샘플코드_02
+* 샘플코드_02
 ```
 from microbit import *
 
@@ -59,7 +62,7 @@ Led_square = Image("99999:"
 display.show(Led_square)
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
 from microbit import *
 
@@ -72,7 +75,7 @@ while True:
 ```
 
 ## 적용하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 from microbit import *
 import time
