--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -150,6 +150,10 @@ print(str(less_or_equal_result))
 
 ## 적용하기 샘플코드
 ### 샘플코드_01
+ * GPT 프롬프트 엔지니어링과 템플릿을 활용하여 정교한 코드 결과 출력 받기입니다.
+ * 챕터 1,2에서 활용한 프롬프트 엔지니어링 패턴에서 마지막 ‘템플릿의 요소’를 추가하여 코드 설계를 정교하게 하겠습니다.
+ * 아래 템플릿은 ‘사용하지 않는 파이썬 문법’이라는 요소를 템프릿으로 추가하였습니다.
+ * 아직 배우지 않은 파이썬 문법이 나오지 않도록 컨트롤 할 것입니다. 
 ```
 
 ```
