--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -1,7 +1,7 @@
 #자료 파트 코드
 ## 배우기 샘플코드
-### 샘플코드_01
-* 산술 연산자 출력하기
+### 산술 연산자 출력하기
+* 샘플코드_01
 ```
 num_01=int(input('첫번째 숫자입력:'))
 num_02=int(input('두번째 숫자입력:'))
@@ -31,8 +31,8 @@ Quo, Rem, Pow=num_01//num_02, num_01%num_02, num_01**num_02
 print(Add, Sub, Mul, Div, Quo, Rem, Pow)
 ```
 
-### 샘플코드_02
-* 비교 연산자 결과 출력하기
+### 비교 연산자 결과 출력하기
+* 샘플코드_02 
 ```
 from microbit import*
 
@@ -48,8 +48,8 @@ print(num_01>=num_02)
 print(num_01>=num_02)
 ```
 
-### 샘플코드_03
-* 비교 연산자 변수를 활용하여 출력하기
+### 비교 연산자 변수를 활용하여 출력하기
+* 샘플코드_03 
 ```
 from microbit import *
 
