--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -1,20 +1,56 @@
 # 문자열(출력, 연산) 파트 코드
 ## 배우기 샘플코드
+### 문자열 기본 출력 복습
 * 샘플코드_01
 ```
+from microbit import *
+
+# 문자열을 마이크로 비트의 LED 스크린에 표시
+display.scroll("Hello, World!")
+print("Hello, world!")
 ```
 
+### 문자열 연산하기(더하기, 곱하기)
 * 샘플코드_02
+* 문자열은 뺄셈과 나누셈은 되지 않는다.
 ```
+from microbit import *
+
+part1 = "Micro"
+part2 = "Bit"
+part3 = 2
+whole = part1 + part2
+
+# 연결된 문자열을 표시
+
+print(part1 * part3)
+display.scroll(whole)
 ```
 
+### 문자열 연산을 활용하여 측정된 온도 표현하기
 * 샘플코드_03
 ```
+from microbit import *
+
+temperature = temperature()  # 마이크로 비트의 현재 온도를 얻음
+message = "Temp: " + str(temperature) + "C"
+
+# 온도 정보가 포함된 문자열 표시
+display.scroll(message)
+
 ```
 
 ## 이해하기 샘플코드
 * 샘플코드_01
 ```
+from microbit import *
+
+original = "MicroBit"
+modified = original[:5] + "Python"
+
+# 수정된 문자열을 표시
+display.scroll(modified)
+
 ```
 
 * 샘플코드_02
@@ -23,6 +59,19 @@
 
 * 샘플코드_03
 ```
+from microbit import *
+
+# 온도 측정
+temperature_reading = temperature()
+
+# 사운드 레벨 측정
+sound_level = microphone.sound_level()
+
+# 온도와 사운드 레벨을 문자열로 결합
+message = "Temp: " + str(temperature_reading) + "C, " + "Sound: " + str(sound_level) + " dB"
+
+# 결합된 메시지 표시
+display.scroll(message)
 ```
 
 ## 적용하기 샘플코드
