--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -45,16 +45,36 @@ display.scroll(message)
 ```
 from microbit import *
 
-original = "MicroBit"
-modified = original[:5] + "Python"
+# 각 부분 문자열 정의
+part1 = "I "
+part2 = input("영어 동사를 입력해주세요:")
+part3 = "you"
 
-# 수정된 문자열을 표시
-display.scroll(modified)
+# 문자열 연결하여 비밀 메시지 생성
+secret_message = part1 + part2 + part3
 
+# 비밀 메시지 표시
+print(secret_message)
+display.scroll(secret_message)
 ```
 
 * 샘플코드_02
 ```
+from microbit import *
+
+part1 = "Micro"
+part2 = "Bit"
+part3 = 2
+whole = part1 + part2
+
+# part1을 part3(2)만큼 반복하여 표시
+repeated_part = part1 * part3
+
+# 반복된 문자열과 연결된 문자열을 결합
+combined_message = repeated_part + " " + whole
+
+# 결합된 메시지 표시
+display.scroll(combined_message)
 ```
 
 * 샘플코드_03
@@ -75,6 +95,33 @@ display.scroll(message)
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* a,b버튼을 10초동안 번갈아 누르고 카운팅하여 문자열 연산으로 출력
 ```
+"""
+프롬프트 템프릿
+1.코드 언어:
+2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
+3.포함될 파이썬 문법:
+4.사용하지 않는 문법:
+5.코드 플래싱 시 마이크로 비트 최종 작동 모습:
+6.수정 할 샘플 코드:
+7.추가 요청 사항_01:
+8.추가 요청 사항_02:
+"""
+
+from microbit import *
+import time
+
+# 10초간 버튼 입력 기다리기
+display.scroll("Go!")
+time.sleep(10)
+
+# 버튼 누른 횟수 가져오기
+a_presses = button_a.get_presses()
+b_presses = button_b.get_presses()
+
+# 결과 문자열 생성 및 출력
+result = "A: " + str(a_presses) + " times, B: " + str(b_presses) + " times"
+display.scroll(result)
+
 ```
