--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -7,7 +7,13 @@ from microbit import *
 
 # 문자열을 마이크로 비트의 LED 스크린에 표시
 display.scroll("Hello, World!")
-print("Hello, world!")
+display.scroll('Love Microbir')
+print('Hello, world!')
+print('''
+Hello world!
+I love Microbit
+''')
+
 ```
 
 ### 문자열 연산하기(더하기, 곱하기)
