--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -33,6 +33,8 @@ print(part1 * part3)
 display.scroll(whole)
 ```
 
+* [런모어 질문] 문자열에 '(작은 따옴표)'는 어떻게 표현시키나?
+
 ### 문자열 연산을 활용하여 측정된 온도 표현하기
 * 샘플코드_03
 ```
