--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -3,7 +3,14 @@
 *샘플코드_01
 ```
 #문자열 인덱싱
-text_00='-
+from microbit import *
+
+text='I love microbit and python'
+index_text=text[7]+text[16]+text[12]+text[13]+text[14]
+print(index_text)
+
+#응용
+display.scroll((text[4]+text[1])*2)
 ```
 
 *샘플코드_02
