--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -6,24 +6,38 @@
 from microbit import *
 
 text='I love microbit and python'
-index_text=text[7]+text[16]+text[12]+text[13]+text[14]
-print(index_text)
 
-#응용
-display.scroll((text[4]+text[1])*2)
+index_l=text[2]
+index_m=text[7]
+
+display.show(index_l)
+sleep(1000)
+display.scroll(index_m)
+sleep(1000)
 ```
 
 *샘플코드_02
 ```
+#문자열 슬라이싱(기본)
 ```
 
 *샘플코드_03
 ```
+#문자열 슬라이싱(음수)
 ```
 
 ## 이해하기 샘플코드
 *샘플코드_01
 ```
+#문자열 인덱싱
+from microbit import *
+
+text='I love microbit and python'
+index_text=text[7]+text[16]+text[12]+text[13]+text[14]
+print(index_text)
+
+#응용
+display.scroll((text[4]+text[1])*2)
 ```
 
 *샘플코드_02
