--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -1,6 +1,6 @@
 # 문자열(인덱싱, 슬라이싱)파트 코드
 ## 배우기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 #문자열 인덱싱
 from microbit import *
@@ -16,12 +16,29 @@ display.scroll(index_m)
 sleep(1000)
 ```
 
-*샘플코드_02
+* 샘플코드_02
+- arr[start:stop]         # items start through stop-1
+- arr[start:]             # items start through the rest of the array
+- arr[:stop]              # items from the beginning through stop-1
+- arr[:]                  # a copy of the whole array
+- arr[start:stop:step]    # start through not past stop, by step
 ```
 #문자열 슬라이싱(기본)
+from microbit import *
+
+text='I love microbit, python and GPT'
+
+slicing_00=text[7:15]
+slicing_01=text[:6]  #[0:6]
+slicing_02=text[27:]  #[27:30]
+slicing_03=
+
+display.show(index_l)
+display.scroll(index_m)
+
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
 #문자열 슬라이싱(음수)
 ```
@@ -40,15 +57,15 @@ print(index_text)
 display.scroll((text[4]+text[1])*2)
 ```
 
-*샘플코드_02
+* 샘플코드_02
 ```
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
 ```
 
 ## 적용하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 ```
