--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -2,7 +2,6 @@
 ## 배우기 샘플코드
 * 샘플코드_01
 ```
-#문자열 인덱싱
 from microbit import *
 
 text='I love microbit and python'
@@ -10,10 +9,16 @@ text='I love microbit and python'
 index_l=text[2]
 index_m=text[7]
 
+
+
 display.show(index_l)
 sleep(1000)
 display.scroll(index_m)
 sleep(1000)
+
+#인덱스 번호 추출하기
+index_num=text.index('I')
+print(index_num)
 ```
 
 * 샘플코드_02
@@ -24,6 +29,7 @@ sleep(1000)
 - arr[start:stop:step]    # start through not past stop, by step
 ```
 #문자열 슬라이싱(기본)
+
 from microbit import *
 
 text='I love microbit, python and GPT'
@@ -31,10 +37,13 @@ text='I love microbit, python and GPT'
 slicing_00=text[7:15]
 slicing_01=text[:6]  #[0:6]
 slicing_02=text[27:]  #[27:30]
-slicing_03=
 
-display.show(index_l)
-display.scroll(index_m)
+
+display.show(slicing_00)
+sleep(1000)
+display.scroll(slicing_01)
+sleep(1000)
+print(slicing_02)
 
 ```
 
