--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -50,6 +50,20 @@ print(slicing_02)
 * 샘플코드_03
 ```
 #문자열 슬라이싱(음수)
+from microbit import *
+
+text='I love microbit, python and GPT'
+
+slicing_00=text[:-25] #[0:6]과 같음
+slicing_01=text[-3:]  #[-3:1]
+slicing_02=text[:-4]  #[:27]
+
+display.scroll(slicing_00)
+print(slicing_00)
+display.scroll(slicing_01)
+print(slicing_01)
+display.scroll(slicing_02)
+print(slicing_02)
 ```
 
 ## 이해하기 샘플코드
