--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -82,6 +82,19 @@ display.scroll((text[4]+text[1])*2)
 
 * 샘플코드_02
 ```
+#문자열 슬라이싱(기본)
+from microbit import *
+
+text=input('공백포함 문자 작성:')
+slicing_front=int(input('슬라이싱 앞 숫자:'))
+slicing_back=int(input('슬라이싱 뒤 숫자:'))
+slicing=text[slicing_front:slicing_back]
+
+display.scroll(slicing)
+print(slicing)
+sleep(1000)
+
+#위 코드를 실행했을 때 Hello world!를 입력한 후 슬라이싱 값을 입력했을 때, world!가 나오도록 하기 위해 입력해야 하는 숫자는? 
 ```
 
 * 샘플코드_03
