--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -1,5 +1,6 @@
 # 문자열(인덱싱, 슬라이싱)파트 코드
 ## 배우기 샘플코드
+###문자열 인덱싱
 * 샘플코드_01
 ```
 from microbit import *
@@ -21,6 +22,7 @@ index_num=text.index('I')
 print(index_num)
 ```
 
+### 문자열 슬라이싱 기본
 * 샘플코드_02
 - arr[start:stop]         # items start through stop-1
 - arr[start:]             # items start through the rest of the array
@@ -47,6 +49,7 @@ print(slicing_02)
 
 ```
 
+### 문자열 슬라이싱 음수 사용용
 * 샘플코드_03
 ```
 #문자열 슬라이싱(음수)
@@ -94,9 +97,11 @@ display.scroll(slicing)
 print(slicing)
 sleep(1000)
 
-#위 코드를 실행했을 때 Hello world!를 입력한 후 슬라이싱 값을 입력했을 때, world!가 나오도록 하기 위해 입력해야 하는 숫자는? 
+#
 ```
+* [런모어 질문] 위 코드를 실행했을 때 Hello world!를 입력한 후 슬라이싱 값을 입력했을 때, world!가 나오도록 하기 위해 입력해야 하는 숫자는?
 
+  
 * 샘플코드_03
 ```
 ```
