--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -53,7 +53,57 @@ print(slicing_02)
 * 샘플코드_03
 ```
 #문자열 슬라이싱(음수)
-from 기
+from microbit import *
+
+text='I love microbit, python and GPT'
+
+slicing_00=text[:-25] #[0:6]과 같음
+slicing_01=text[-3:]  #[-3:1]
+slicing_02=text[:-4]  #[:27]
+
+display.scroll(slicing_00)
+print(slicing_00)
+display.scroll(slicing_01)
+print(slicing_01)
+display.scroll(slicing_02)
+print(slicing_02)
+```
+
+## 이해하기 샘플코드
+*샘플코드_01
+```
+#문자열 인덱싱
+from microbit import *
+
+text='I love microbit and python'
+index_text=text[7]+text[16]+text[12]+text[13]+text[14]
+print(index_text)
+
+#응용
+display.scroll((text[4]+text[1])*2)
+```
+
+* 샘플코드_02
+```
+#문자열 슬라이싱(기본)
+from microbit import *
+
+text=input('공백포함 문자 작성:')
+slicing_front=int(input('슬라이싱 앞 숫자:'))
+slicing_back=int(input('슬라이싱 뒤 숫자:'))
+slicing=text[slicing_front:slicing_back]
+
+display.scroll(slicing)
+print(slicing)
+sleep(1000)
+```
+
+* [런모어 질문] 위 코드를 실행했을 때 Hello world!를 입력한 후 슬라이싱 값을 입력했을 때, world!가 나오도록 하기 위해 입력해야 하는 숫자는?
+
+  
+* 샘플코드_03
+```
+#문자열 인덱싱에서 음수사용 암호코드
 from microbit import *
 
 alphabet='abcdefghijklmnopqrstuvwxyz'
@@ -64,6 +114,8 @@ num_4=int(input('인덱싱 네번째 숫자(음수 입력):'))
 
 ciphertext=alphabet[num_1]+alphabet[num_2]+alphabet[num_3]+alphabet[num_4]
 display.scroll(ciphertext)
+
+
 ```
 
 ## 적용하기 샘플코드
