--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -120,5 +120,64 @@ display.scroll(ciphertext)
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-```
-```
+  - GPT프롬프트 템플릿
+    ```
+    1.코드 언어:
+    2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
+    3.사용할 파이썬 문법:
+    4.사용하지 않는 파이썬 문법:
+    5.코드 플래싱 시 마이크로 비트 최종 작동 모습:
+    6.수정 할 샘플 코드 부분:
+    7.파이썬 코드 설계 수준:
+    8.추가 요청 사항_01:
+    9.추가 요청 사항_02:
+    ```
+
+    - 사용한 샘플 템플릿: 이해하기 3번
+    ```
+    1.코드 언어: 파이썬(Python)
+    2.코드 설계 시 사용할 마이크로비트 라이브러리 함수: microbit, speech 라이브러리
+    3.사용할 파이썬 문법: 문자열 인덱싱, 슬라이싱
+    4.사용하지 않는 파이썬 문법: while, for, def, class(아직 안배움)
+    5.코드 플래싱 시 마이크로 비트 최종 작동 모습: a~z까지 영어 단어가 text에 들어감.  4개의 단어를 input()함수를 활용하여 인덱싱하고, 인덱싱하여 나온 문자열 결과를 퀴즈 형태로 맞춤. 정확히 맞추게 되면 마이크로 비트 speech.say('True')로, 틀리면 speech.say('False')로 음성이 출력되도록 해주세요.
+    6.수정 할 샘플 코드 부분:
+    from microbit import *
+    
+    alphabet='abcdefghijklmnopqrstuvwxyz'
+    num_1=int(input('인덱싱 첫번째 숫자(음수 입력):'))
+    num_2=int(input('인덱싱 두번째 숫자(음수 입력):'))
+    num_3=int(input('인덱싱 세번째 숫자(음수 입력):'))
+    num_4=int(input('인덱싱 네번째 숫자(음수 입력):'))
+    
+    ciphertext=alphabet[num_1]+alphabet[num_2]+alphabet[num_3]+alphabet[num_4]
+    display.scroll(ciphertext)
+    
+    7.파이썬 코드 설계 수준: 파이썬 초급자 수준
+    8.추가 요청 사항_01: 퀴즈를 입력하는 부분을 추가
+    9.추가 요청 사항_02: 없음
+    ```
+
+    - GPT생성 코드
+    ```
+    from microbit import *
+    import speech
+    
+    alphabet = 'abcdefghijklmnopqrstuvwxyz'
+    num_1 = int(input('인덱싱 첫번째 숫자(음수 입력):'))
+    num_2 = int(input('인덱싱 두번째 숫자(음수 입력):'))
+    num_3 = int(input('인덱싱 세번째 숫자(음수 입력):'))
+    num_4 = int(input('인덱싱 네번째 숫자(음수 입력):'))
+    
+    # 사용자 입력으로 구성된 문자열 생성
+    ciphertext = alphabet[num_1] + alphabet[num_2] + alphabet[num_3] + alphabet[num_4]
+    display.scroll(ciphertext)
+    
+    # 사용자로부터 퀴즈 답 입력 받기
+    quiz_answer = input('퀴즈: 위 문자열은 무엇일까요? ')
+    
+    # 정답 여부 확인
+    if quiz_answer.lower() == ciphertext:
+        speech.say('True')
+    else:
+        speech.say('False')
+    ```
