--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -133,7 +133,7 @@ display.scroll(ciphertext)
     9.추가 요청 사항_02:
     ```
 
-    - 사용한 샘플 템플릿: 이해하기 3번
+  - GPT 프롬프트 템플릿 입력 내용
     ```
     1.코드 언어: 파이썬(Python)
     2.코드 설계 시 사용할 마이크로비트 라이브러리 함수: microbit, speech 라이브러리
@@ -141,6 +141,7 @@ display.scroll(ciphertext)
     4.사용하지 않는 파이썬 문법: while, for, def, class(아직 안배움)
     5.코드 플래싱 시 마이크로 비트 최종 작동 모습: a~z까지 영어 단어가 text에 들어감.  4개의 단어를 input()함수를 활용하여 인덱싱하고, 인덱싱하여 나온 문자열 결과를 퀴즈 형태로 맞춤. 정확히 맞추게 되면 마이크로 비트 speech.say('True')로, 틀리면 speech.say('False')로 음성이 출력되도록 해주세요.
     6.수정 할 샘플 코드 부분:
+    #이해하기 3번 코드 입력
     from microbit import *
     
     alphabet='abcdefghijklmnopqrstuvwxyz'
@@ -157,7 +158,7 @@ display.scroll(ciphertext)
     9.추가 요청 사항_02: 없음
     ```
 
-    - GPT생성 코드
+  - GPT생성 코드
     ```
     from microbit import *
     import speech
