--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -2,6 +2,16 @@
 ## 배우기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+
+name = "Microbit"
+age = 5
+
+message = "Hello, I'm %s and I'm %d years old!" % (name, age)
+
+while True:
+    display.scroll(message)
+    sleep(2000)
 ```
 
 *샘플코드_02
