Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -1,5 +1,6 @@
 # 문자열(포멧팅, 문자열 함수)파트 코드
 ## 배우기 샘플코드
+### 문자열 포멧팅 기초
 * 샘플코드_01
 ```
 from microbit import *
@@ -8,14 +9,31 @@ name = "Microbit"
 age = 5
 
 message = "Hello, I'm %s and I'm %d years old!" % (name, age)
+print(message)
 
 while True:
     display.scroll(message)
     sleep(2000)
 ```
-
-*샘플코드_02
+### 문자열 포멧팅 함수 활용
+* 샘플코드_02
 ```
+from microbit import *
+
+name = "Microbit"
+age = 5
+
+message_00 = "Hello, I'm {} and I'm {} years old!".format(name, age)
+message_01 = "Hello, I'm {0} and I'm {1} years old!".format(name, age)
+
+# message_02 = f"Hello, I'm {name} and I'm {age} years old!"
+# f-string의 포멧팅 방식은 microbit python editor에서 적용이 안됨.
+
+print(message_00)
+print(message_01)
+while True:
+    display.scroll(message_01)
+    sleep(2000)
 ```
 
 *샘플코드_03
