Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -26,8 +26,9 @@ age = 5
 message_00 = "Hello, I'm {} and I'm {} years old!".format(name, age)
 message_01 = "Hello, I'm {0} and I'm {1} years old!".format(name, age)
 
-# message_02 = f"Hello, I'm {name} and I'm {age} years old!"
-# f-string의 포멧팅 방식은 microbit python editor에서 적용이 안됨.
+#message_02 = f"Hello, I'm {name} and I'm {age} years old!"
+#f-string의 포멧팅 방식은 microbit python editor에서 적용이 안됨.
+#f-string 포멧팅 방식아란?
 
 print(message_00)
 print(message_01)
